# Elciego

./: CMakeLists.txt  README.md  inventarioelciego.txt  main.cpp  registroOperaciones.txt
include/: AdministrarEquipos.h  CamaraDSLR.h  EquipoFotografico.h  EquipoIluminacion.h  Fotografo.h  LenteIntercambiable.h
src/: AdministrarEquipos.cpp  CamaraDSLR.cpp  EquipoFotografico.cpp  EquipoIluminacion.cpp  Fotografo.cpp  LenteIntercambiable.cpp
